fixed login label to not overflow. small fixes in trade

--- a/styles/Login.css
+++ b/styles/Login.css
@@ -18,7 +18,7 @@
 	word-break: break-word;
 }
 .Login {
-	width: 20vw;
+	width: 25vw;
 	/* width: auto; */
 	transition: width 1s ease-in-out;
 	background-color: forestgreen;
