--- a/styles/Trade.css
+++ b/styles/Trade.css
@@ -1,6 +1,6 @@
 .Trade {
 	color: whitesmoke;
-	background-color: crimson;
+	background-color: rgba(220, 20, 60, 0.733);
 	width: 50%;
 	left: 25%;
 	height: auto;
